MBUS refactoring, AC Haier tolerance for comm errors(CRC check), MERCURY - not blocking MBUS if failed (delay added if login fail) Kernel fixes (flags, Locks) Multivent to multichannel virtual AC converted (interim) PID library forked and changed

--- a/platformio.ini
+++ b/platformio.ini
@@ -114,7 +114,8 @@ lib_deps =
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
-	br3ttb/PID@^1.2.1
+;	br3ttb/PID@^1.2.1
+	https://github.com/anklimov/Arduino-PID-Library.git
 	TimerInterrupt_Generic
 	d00616/arduino-NVM @ ^0.9.1
 
@@ -183,7 +184,8 @@ lib_deps =
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
-	br3ttb/PID@^1.2.1
+;	br3ttb/PID@^1.2.1
+    https://github.com/anklimov/Arduino-PID-Library.git
 	;ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 
@@ -255,7 +257,8 @@ lib_deps =
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
-	br3ttb/PID@^1.2.1
+	;br3ttb/PID@^1.2.1
+	https://github.com/anklimov/Arduino-PID-Library.git
 	;ArduinoMDNS
 	;ESPmDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
@@ -323,7 +326,8 @@ lib_deps =
 	https://github.com/anklimov/ArduinoOTA
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
-	br3ttb/PID@^1.2.1
+	;br3ttb/PID@^1.2.1
+	https://github.com/anklimov/Arduino-PID-Library.git
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	rweather/Crypto
@@ -390,7 +394,8 @@ lib_deps =
 	https://github.com/anklimov/ArduinoOTA
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
-	br3ttb/PID@^1.2.1
+	;br3ttb/PID@^1.2.1
+	https://github.com/anklimov/Arduino-PID-Library.git
 	;ArduinoMDNS
 	;https://github.com/khoih-prog/TimerInterrupt_Generic.git
 
@@ -464,7 +469,8 @@ lib_deps =
 	https://github.com/anklimov/ArduinoOTA
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
-	br3ttb/PID@^1.2.1
+	;br3ttb/PID@^1.2.1
+	https://github.com/anklimov/Arduino-PID-Library.git
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	rweather/Crypto
@@ -516,7 +522,8 @@ lib_deps =
 	https://github.com/anklimov/ArduinoOTA
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
-	br3ttb/PID@^1.2.1
+	;br3ttb/PID@^1.2.1
+	https://github.com/anklimov/Arduino-PID-Library.git
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 
@@ -612,7 +619,8 @@ lib_deps =
 	https://github.com/anklimov/ArduinoOTA.git
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
-	br3ttb/PID@^1.2.1
+	;br3ttb/PID@^1.2.1
+	https://github.com/anklimov/Arduino-PID-Library.git
 	;ArduinoMDNS
 	;MDNS
 	ESP8266mDNS
@@ -665,7 +673,8 @@ lib_deps =
 	https://github.com/anklimov/ArduinoOTA
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
-	br3ttb/PID@^1.2.1
+	;br3ttb/PID@^1.2.1
+	https://github.com/anklimov/Arduino-PID-Library.git
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 
@@ -731,7 +740,8 @@ lib_deps =
 	https://github.com/anklimov/ArduinoOTA
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
-	br3ttb/PID@^1.2.1
+	;br3ttb/PID@^1.2.1
+	https://github.com/anklimov/Arduino-PID-Library.git
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	https://github.com/rlogiacco/CircularBuffer
@@ -785,7 +795,8 @@ lib_deps =
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
-	br3ttb/PID@^1.2.1
+	;br3ttb/PID@^1.2.1
+	https://github.com/anklimov/Arduino-PID-Library.gitv
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 
@@ -842,7 +853,8 @@ lib_deps =
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
 	SPI
-	br3ttb/PID@^1.2.1
+	;br3ttb/PID@^1.2.1
+	https://github.com/anklimov/Arduino-PID-Library.git
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	https://github.com/anklimov/ModbusMaster
@@ -910,7 +922,8 @@ lib_deps =
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
 	SPI
-	br3ttb/PID@^1.2.1
+	;br3ttb/PID@^1.2.1
+	https://github.com/anklimov/Arduino-PID-Library.git
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	https://github.com/anklimov/ModbusMaster
@@ -979,7 +992,8 @@ lib_deps =
 	Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
 	SPI
-	br3ttb/PID@^1.2.1
+	;br3ttb/PID@^1.2.1
+	https://github.com/anklimov/Arduino-PID-Library.git
 ;	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	https://github.com/anklimov/ModbusMaster
