some Cleanup Mbus logging fix Rotary Encoder input (1-st success^ to be continued) new JSON routines Multivent to Multi AC - interim, to be continued

--- a/platformio.ini
+++ b/platformio.ini
@@ -188,6 +188,7 @@ lib_deps =
     https://github.com/anklimov/Arduino-PID-Library.git
 	;ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+	https://github.com/mathertel/RotaryEncoder
 
 monitor_speed = 115200
 
@@ -263,6 +264,7 @@ lib_deps =
 	;ESPmDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
     https://github.com/anklimov/arduino-CAN.git
+	https://github.com/mathertel/RotaryEncoder
 
 [env:due]
 ;Experimental target with universal Ethernet Library
@@ -333,6 +335,7 @@ lib_deps =
 	rweather/Crypto
 	collin80/can_common
     collin80/due_can
+	https://github.com/mathertel/RotaryEncoder
 monitor_speed = 115200
 
 [env:mega2560slim]
@@ -474,6 +477,7 @@ lib_deps =
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	rweather/Crypto
+	https://github.com/mathertel/RotaryEncoder
 
 monitor_speed = 115200
 
@@ -526,12 +530,15 @@ lib_deps =
 	https://github.com/anklimov/Arduino-PID-Library.git
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+	https://github.com/mathertel/RotaryEncoder
 
 
 
 [env:esp8266-wifi]
 platform = espressif8266
 framework = arduino
+monitor_filters = esp8266_exception_decoder
+build_type = debug
 ;board = nodemcuv2
 ;esp12e             ESP8266  80MHz        4MB      80KB   Espressif ESP8266 ESP-12E
 ;esp01_1m           ESP8266  80MHz        1MB      80KB   Espressif Generic ESP8266 ESP-01 1M
@@ -624,6 +631,7 @@ lib_deps =
 	;ArduinoMDNS
 	;MDNS
 	ESP8266mDNS
+	https://github.com/mathertel/RotaryEncoder
 monitor_speed = 115200
 
 [env:mega2560-5100]
@@ -677,6 +685,7 @@ lib_deps =
 	https://github.com/anklimov/Arduino-PID-Library.git
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+	https://github.com/mathertel/RotaryEncoder
 
 monitor_speed = 115200
 
@@ -748,6 +757,7 @@ lib_deps =
     rweather/Crypto
 	https://github.com/collin80/due_can.git
 	https://github.com/collin80/can_common.git
+	https://github.com/mathertel/RotaryEncoder
 monitor_speed = 115200
 
 [env:controllino]
@@ -799,6 +809,7 @@ lib_deps =
 	https://github.com/anklimov/Arduino-PID-Library.git
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+	https://github.com/mathertel/RotaryEncoder
 
 monitor_speed = 115200
 
@@ -858,6 +869,7 @@ lib_deps =
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	https://github.com/anklimov/ModbusMaster
+	https://github.com/mathertel/RotaryEncoder
 
 monitor_speed = 115200
 
@@ -927,8 +939,7 @@ lib_deps =
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	https://github.com/anklimov/ModbusMaster
-	https://github.com/anklimov/ModbusMaster
-
+	https://github.com/mathertel/RotaryEncoder
 monitor_speed = 115200
 
 
@@ -999,6 +1010,7 @@ lib_deps =
 	https://github.com/anklimov/ModbusMaster
 	pazi88/STM32_CAN
 	ericksimoes/Ultrasonic
+	https://github.com/mathertel/RotaryEncoderv
 
 monitor_speed = 115200
 
