Driver refactoring & core fixes CAN fixes and extension stm32 timer

--- a/platformio.ini
+++ b/platformio.ini
@@ -1010,7 +1010,8 @@ lib_deps =
 	https://github.com/anklimov/ModbusMaster
 	pazi88/STM32_CAN
 	ericksimoes/Ultrasonic
-	https://github.com/mathertel/RotaryEncoderv
+	https://github.com/mathertel/RotaryEncoder
+	;TimerInterrupt_Generic
 
 monitor_speed = 115200
 
