--- a/platformio.ini
+++ b/platformio.ini
@@ -118,6 +118,8 @@ lib_deps =
 	https://github.com/anklimov/Arduino-PID-Library.git
 	TimerInterrupt_Generic
 	d00616/arduino-NVM @ ^0.9.1
+	https://github.com/mathertel/RotaryEncoder
+
 
 
 
@@ -166,10 +168,9 @@ lib_deps =
 	https://github.com/anklimov/pubsubclient.git
 	Streaming
     ;ESP_EEPROM
-	;https://github.com/anklimov/NRFFlashStorage
 	Adafruit Unified Sensor
 	DHT sensor library for ESPx
-	https://github.com/anklimov/Artnet.git
+	;https://github.com/anklimov/Artnet.git
 	https://github.com/anklimov/ModbusMaster
 	https://github.com/anklimov/Arduino-Temperature-Control-Library.git
 	https://github.com/anklimov/DS2482_OneWire
@@ -177,17 +178,18 @@ lib_deps =
 	FastLED@3.3.2
 	ClosedCube HDC1080
     ;SparkFun CCS811 Arduino Library
-	SparkFun CCS811 Arduino Library@~1.0.7
+	;sparkfun/SparkFun CCS811 Arduino Library@~1.0.7
+	https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library#v1.0.7
 	M5Stack
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
-	Adafruit MCP23017 Arduino Library
+	;Adafruit MCP23017 Arduino Library
 	Adafruit BusIO
 	https://github.com/arcao/Syslog.git
 ;	br3ttb/PID@^1.2.1
     https://github.com/anklimov/Arduino-PID-Library.git
 	;ArduinoMDNS
-	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+	;https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	https://github.com/mathertel/RotaryEncoder
 
 monitor_speed = 115200
@@ -252,7 +254,7 @@ lib_deps =
 	https://github.com/anklimov/ESP-Dmx
 	FastLED@3.3.2
 	ClosedCube HDC1080
-	SparkFun CCS811 Arduino Library@~1.0.7
+	https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library#v1.0.7
 	Adafruit NeoPixel
     https://github.com/anklimov/ArduinoOTA
 	Adafruit MCP23017 Arduino Library
@@ -323,7 +325,8 @@ lib_deps =
 	https://github.com/arcao/Syslog.git
 	Streaming
 	ClosedCube HDC1080
-	SparkFun CCS811 Arduino Library@~1.0.7
+	;sparkfun/SparkFun CCS811 Arduino Library@~1.0.7
+	https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library#v1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
 	Adafruit MCP23017 Arduino Library
@@ -401,6 +404,8 @@ lib_deps =
 	https://github.com/anklimov/Arduino-PID-Library.git
 	;ArduinoMDNS
 	;https://github.com/khoih-prog/TimerInterrupt_Generic.git
+	https://github.com/mathertel/RotaryEncoder
+
 
 monitor_speed = 115200
 
@@ -467,7 +472,7 @@ lib_deps =
 	https://github.com/arcao/Syslog.git
 	Streaming
 	ClosedCube HDC1080
-	SparkFun CCS811 Arduino Library@~1.0.7
+	https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library#v1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
 	Adafruit MCP23017 Arduino Library
@@ -521,7 +526,7 @@ lib_deps =
 	https://github.com/arcao/Syslog.git
 	Streaming
 	ClosedCube HDC1080
-	SparkFun CCS811 Arduino Library@~1.0.7
+	https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library#v1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
 	Adafruit MCP23017 Arduino Library
@@ -621,7 +626,7 @@ lib_deps =
 	Streaming
 	ESP_EEPROM
 	ClosedCube HDC1080
-	SparkFun CCS811 Arduino Library@~1.0.7
+	https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library#v1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA.git
 	Adafruit MCP23017 Arduino Library
@@ -676,7 +681,7 @@ lib_deps =
 	https://github.com/arcao/Syslog.git
 	Streaming
 	ClosedCube HDC1080
-	SparkFun CCS811 Arduino Library@~1.0.7
+	https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library#v1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
 	Adafruit MCP23017 Arduino Library
@@ -744,7 +749,7 @@ lib_deps =
 	Streaming
 	https://github.com/livello/PrintEx#is-select-redecl
 	ClosedCube HDC1080
-	SparkFun CCS811 Arduino Library@~1.0.7
+	https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library#v1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
 	Adafruit MCP23017 Arduino Library
@@ -799,7 +804,7 @@ lib_deps =
 	Streaming
 	https://github.com/livello/PrintEx#is-select-redecl
 	ClosedCube HDC1080
-	SparkFun CCS811 Arduino Library@~1.0.7
+	https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library#v1.0.7
 	Adafruit NeoPixel
 	https://github.com/anklimov/ArduinoOTA
 	Adafruit MCP23017 Arduino Library
