AC CRC fix syslog auto suspending when no ARP responce optiboot env slimming generic 2560 environment (any eth)

--- a/platformio.ini
+++ b/platformio.ini
@@ -480,26 +480,26 @@ lib_deps =
 	;br3ttb/PID@^1.2.1
 	https://github.com/anklimov/Arduino-PID-Library.git
 	ArduinoMDNS
-	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+	;https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	rweather/Crypto
 	https://github.com/mathertel/RotaryEncoder
 
 monitor_speed = 115200
 
 
-[env:mega2560-5500]
+[env:mega2560]
 platform = atmelavr
 board = megaatmega2560
 monitor_speed = 115200
 framework = arduino
-build_flags = !python get_build_flags.py mega2560-5500
+build_flags = !python get_build_flags.py mega2560
 lib_ignore = 
         ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	DHT sensor library for ESPx
 	DmxDue
 	DueFlashStorage
 	WifiManager
-	Ethernet
+	;Ethernet
 	Ethernet3
 	Ethernet5100
 	HTTPClient
@@ -517,7 +517,7 @@ lib_deps =
 	https://github.com/anklimov/CmdArduino
 	https://github.com/anklimov/ModbusMaster
 	https://github.com/anklimov/DMXSerial
-	https://github.com/anklimov/Ethernet2
+	https://github.com/anklimov/Ethernet.git
 	https://github.com/anklimov/pubsubclient.git
 	https://github.com/anklimov/Artnet.git
 	FastLED@3.3.2
@@ -536,6 +536,7 @@ lib_deps =
 	ArduinoMDNS
 	https://github.com/khoih-prog/TimerInterrupt_Generic.git
 	https://github.com/mathertel/RotaryEncoder
+	https://github.com/anklimov/ArduinoOTA
 
 
 
