OTA fixed (broken on last release) New target: esp32c3 added partitions optimized for all esp32 targets & OTA

--- a/platformio.ini
+++ b/platformio.ini
@@ -65,7 +65,7 @@ monitor_speed = 115200
 ;upload_protocol = mbed
 ;upload_port = /dev/cu.SLAB_USBtoUART
 framework = arduino
-build_flags = !python get_build_flags.py nrf52840
+build_flags = !python3 get_build_flags.py nrf52840
 lib_ignore = 
     ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	ESP_EEPROM
@@ -137,7 +137,9 @@ _upload_command = custom-build-flags/upload_m5stack $SOURCE
 
 framework = arduino
 upload_speed = 921600
-build_flags = !python get_build_flags.py m5stack
+build_flags = !python3 get_build_flags.py m5stack
+; >50% space - ok for ESP due spare partition
+board_build.partitions = min_spiffs.csv
 lib_ignore = 
     ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	DmxSimple
@@ -201,6 +203,7 @@ monitor_filters = esp32_exception_decoder
 build_type = debug
 board = upesy_wroom
 board_build.partitions = min_spiffs.csv
+;board_build.partitions = huge_app.csv
 extra_scripts = extra_script.py
 monitor_speed = 115200
 
@@ -212,7 +215,7 @@ monitor_speed = 115200
 _upload_command = custom-build-flags/upload_esp32-wifi $SOURCE
 
 
-build_flags = !python get_build_flags.py esp32-wifi
+build_flags = !python3 get_build_flags.py esp32-wifi
 lib_ignore = 
     ;COMMENT/UNCOMMENT next line for software 1-wire driver on/off
     ;DS2482_OneWire
@@ -268,13 +271,90 @@ lib_deps =
     https://github.com/anklimov/arduino-CAN.git
 	https://github.com/mathertel/RotaryEncoder
 
+
+[env:esp32c3-wifi]
+platform = espressif32
+framework = arduino
+monitor_filters = esp32_exception_decoder
+build_type = release
+board=ESP32-C3-DevKitC-02
+
+board_build.partitions = min_spiffs.csv
+extra_scripts = extra_script.py
+monitor_speed = 115200
+
+;Comment next 2 lines to disable OTA and allow USB uploading, uncomment for OTA 
+;upload_protocol = custom
+;upload_command = arduinoOTA -address 192.168.1.17 -port 80 -username arduino -password password -b -upload /sketch -sketch $SOURCE ;sleep 6
+
+;Alternatively, use OTA script for target ota (pio -t ota). Place appropriate script to custom-build-flags/ to allow OTA by one click
+_upload_command = custom-build-flags/upload_esp32c3-wifi $SOURCE
+
+
+build_flags = !python3 get_build_flags.py esp32c3-wifi
+lib_ignore = 
+    ;COMMENT/UNCOMMENT next line for software 1-wire driver on/off
+    ;DS2482_OneWire
+	DmxSimple
+	DMXSerial
+	DmxDue
+	DueFlashStorage
+	SD
+	SdFat
+	Ethernet
+	Ethernet2
+	Ethernet3
+	Ethernet5100
+	;EEPROM
+	ESP_EEPROM
+	UIPEthernet
+	ESP_EEPROM
+	httpClient
+	HttpClient_ID66
+	HttpClient
+	ArduinoHttpClient
+	M5Stack
+	FastLED
+lib_deps = 
+	;https://github.com/ebenolson/WIFIMANAGER-ESP32.git
+	https://github.com/tzapu/WiFiManager
+	;https://github.com/zhouhan0126/WebServer-esp32.git
+	https://github.com/anklimov/aJson
+	https://github.com/anklimov/CmdArduino
+	https://github.com/anklimov/pubsubclient.git
+	Streaming
+    ;EEPROM
+	;https://github.com/anklimov/NRFFlashStorage
+	Adafruit Unified Sensor
+	DHT sensor library for ESPx
+	;https://github.com/anklimov/Artnet.git
+	https://github.com/anklimov/ModbusMaster
+	https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+	https://github.com/anklimov/DS2482_OneWire
+	;https://github.com/anklimov/ESP-Dmx
+	;FastLED@3.3.2
+	ClosedCube HDC1080
+	https://github.com/sparkfun/SparkFun_CCS811_Arduino_Library#v1.0.7
+	Adafruit NeoPixel
+    https://github.com/anklimov/ArduinoOTA
+	Adafruit MCP23017 Arduino Library
+	Adafruit BusIO
+	https://github.com/arcao/Syslog.git
+	;br3ttb/PID@^1.2.1
+	https://github.com/anklimov/Arduino-PID-Library.git
+	;ArduinoMDNS
+	;ESPmDNS
+	https://github.com/khoih-prog/TimerInterrupt_Generic.git
+    ;https://github.com/anklimov/arduino-CAN.git
+	https://github.com/mathertel/RotaryEncoder	
+
 [env:due]
 ;Experimental target with universal Ethernet Library
 platform = atmelsam
 framework = arduino
 board = due
 extra_scripts = extra_script.py
-build_flags = !python get_build_flags.py due
+build_flags = !python3 get_build_flags.py due
 ; Need to place arduinoOTA utility from Arduino IDE distribution to folder in your PATH
 ;fix address and password
 
@@ -347,7 +427,7 @@ board = megaatmega2560
 upload_port = net:192.168.88.2:23000
 _upload_command = custom-build-flags/upload_mega2560slim $SOURCE
 framework = arduino
-build_flags = !python get_build_flags.py mega2560slim
+build_flags = !python3 get_build_flags.py mega2560slim
 extra_scripts = post:toBin.py
 lib_ignore = 
     ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
@@ -437,7 +517,7 @@ _upload_command = custom-build-flags/upload_mega2560-optiboot $SOURCE
 
 board_upload.speed = ${env:fuses_bootloader.board_bootloader.speed}
 framework = arduino
-build_flags = !python get_build_flags.py mega2560-optiboot
+build_flags = !python3 get_build_flags.py mega2560-optiboot
 lib_ignore = 
     ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	DHT sensor library for ESPx
@@ -492,7 +572,7 @@ platform = atmelavr
 board = megaatmega2560
 monitor_speed = 115200
 framework = arduino
-build_flags = !python get_build_flags.py mega2560
+build_flags = !python3 get_build_flags.py mega2560
 lib_ignore = 
         ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	DHT sensor library for ESPx
@@ -581,7 +661,7 @@ upload_protocol = esptool
 ;Alternatively, use OTA script for target ota (pio -t ota). Place appropriate script to custom-build-flags/ to allow OTA by one click
 _upload_command = custom-build-flags/upload_esp8266-wifi.bat $SOURCE
 
-build_flags = !python get_build_flags.py esp8266-wifi
+build_flags = !python3 get_build_flags.py esp8266-wifi
 
 lib_ignore = 
     ;COMMENT/UNCOMMENT next line for software 1-wire driver  on/off
@@ -646,7 +726,7 @@ board = megaatmega2560
 extra_scripts = extra_script.py
 framework = arduino
 ;upload_port = net:192.168.88.2:23000
-build_flags = !python get_build_flags.py mega2560-5100
+build_flags = !python3 get_build_flags.py mega2560-5100
 _upload_command = custom-build-flags/upload_mega2560-5100 $SOURCE
 lib_ignore = 
     ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
@@ -701,7 +781,7 @@ platform = atmelsam
 framework = arduino
 board = due
 extra_scripts = extra_script.py
-build_flags = !python get_build_flags.py lighthub21
+build_flags = !python3 get_build_flags.py lighthub21
 
 ;Comment next 2 lines to disable OTA and allow USB uploading, uncomment for OTA 
 ;upload_protocol = custom
@@ -771,7 +851,7 @@ platform = atmelavr
 board = megaatmega2560
 
 framework = arduino
-build_flags = !python get_build_flags.py controllino
+build_flags = !python3 get_build_flags.py controllino
 lib_ignore = 
     ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	DHT sensor library for ESPx
@@ -826,7 +906,7 @@ board = nucleo_f103rb
 
 upload_protocol = stlink
 debug_tool = stlink
-build_flags = !python get_build_flags.py stm32-enc2860
+build_flags = !python3 get_build_flags.py stm32-enc2860
 lib_ignore = 
    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	DHT sensor library for ESPx
@@ -896,7 +976,7 @@ framework = arduino
 ;monitor_dtr = 1
 upload_protocol = serial
 ;debug_tool = cmsis-dap
-build_flags = !python get_build_flags.py stm32
+build_flags = !python3 get_build_flags.py stm32
 lib_ignore = 
    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	DHT sensor library for ESPx
@@ -965,7 +1045,7 @@ framework = arduino
 ;monitor_dtr = 1
 upload_protocol = serial
 ;debug_tool = cmsis-dap
-build_flags = !python get_build_flags.py stm32-noip
+build_flags = !python3 get_build_flags.py stm32-noip
 lib_ignore = 
    ;DS2482_OneWire   //UNCOMMENT for software 1-wire driver
 	DHT sensor library for ESPx
